# pyskeleton

./: .gitignore  MANIFEST  MANIFEST.in  README.md  README.rst  create_tar.py  requirements.txt  setup.cfg  setup.py
pyskeleton/: __init__.py  __main__.py  compat.py
skeleton/: __init__.py  __main__.py  main.py
src/ctest/: ctest.c
src/pyskeleton/: __init__.py  __main__.py
tests/: __init__.py  test.py  test_hello.py
