[metadata]
name = pyskeleton
version = attr: pyskeleton.__version__
description = quickly create a python module.
url=https://github.com/a358003542/pyskeleton
long_description = file: README.md
long_description_content_type=text/markdown
author=wanze
author_email=a358003542@outlook.com
maintainer=wanze
maintainer_email=a358003542@outlook.com
license=MIT
keywords = skeleton, python
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = pyskeleton

[options.entry_points]
console_scripts =
    pyskeleton = pyskeleton.__main__:main


